# homework_10_1

./: .coverage  README.md  pyproject.toml
processing/: processing.py
src/: masks.py  processing.py  widget.py
tests/: test_masks.py  test_processing.py  test_widget.py
